--- a/package.json
+++ b/package.json
@@ -26,13 +26,12 @@
     "url": "https://github.com/TyphosLabs/super-errors-json/issues"
   },
   "homepage": "https://github.com/TyphosLabs/super-errors-json#readme",
-  "dependencies": {
-    "super-errors": "^2.0.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "chai": "^3.5.0",
     "dirty-chai": "^1.2.2",
     "istanbul": "^0.4.5",
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "super-errors": "^2.0.0"
   }
 }
